Fixed "monospace" font, which was too small and improved help text.

--- a/eclipse/iSphere Help Task Tags/html/stylesheet.css
+++ b/eclipse/iSphere Help Task Tags/html/stylesheet.css
@@ -13,7 +13,7 @@ u { text-decoration: underline; }
 /*
  *  Program code.
  */
-.code { font-family: monospace; font-size: 0.5em; font-weight: normal; font-style: normal; }
+.code { font-family: monospace; font-size: 0.9em; font-weight: normal; font-style: normal; }
 
 /*
  *  Headline of a topic.
